simulator/src/test/resources/model_files/errors/species_missing_location.mdsl

# A model file that contains a species definition without a location
# This should throw an error.

initial tree {simulation}

species a contained simulation = 1 units
species b

parameter param1 = 1 units

a contained simulation modifier param1 => b contained simulation
